--- a/package.json
+++ b/package.json
@@ -12,25 +12,37 @@
   ],
   "devDependencies": {
     "@types/chai": "^4.3.13",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^22.15.3",
-    "@types/sinon": "^17.0.4"
+    "@types/sinon": "^17.0.4",
+    "mocha": "^11.2.2",
+    "ts-node": "^10.9.2"
   },
   "peerDependencies": {
     "chai": "^4.4.1",
-    "sinon": "^18.0.1",
-    "typescript": "^5.4.0",
     "eslint": "^8.57.0",
     "eslint-config-oclif": "^5.0.0",
     "eslint-config-oclif-typescript": "^3.1.14",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-mocha": "^10.4.3",
-    "nock": "^13.2.9"
+    "nock": "^13.2.9",
+    "sinon": "^18.0.1",
+    "typescript": "^5.4.0"
   },
   "dependencies": {
     "@heroku-cli/color": "^2.0.4",
     "@heroku-cli/command": "^11.5.0",
     "@oclif/core": "^2.16.0",
     "stdout-stderr": "^0.1.13"
+  },
+  "mocha": {
+    "require": [
+      "ts-node/register"
+    ],
+    "watch-extensions": "ts",
+    "recursive": true,
+    "reporter": "spec",
+    "timeout": 360000
   },
   "engines": {
     "node": ">=20"
@@ -39,6 +51,7 @@
     "build": "npm run clean && tsc",
     "clean": "rm -rf dist",
     "lint": "eslint . --ext .ts --config .eslintrc.js",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "mocha 'test/**/*.test.ts'"
   }
-} 
+}
